--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -22,6 +22,7 @@
 
     </div>
 
-    <script src="{{ assets }}/js/jquery.js"></script>
+    <script src="{{ assets }}/js/SP.libs.js"></script>
+    <script src="{{ assets }}/js/SP.main.js"></script>
   </body>
 </html>
