--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{title}} | {{ site.title}}</title>
+<head>
+	<meta charset="UTF-8">
 
-    <link href="{{assets}}/css/main.css" rel="stylesheet">
+	<title>{{ title }} | {{ site.title }}</title>
 
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
+	<meta name="author" content="{{ site.author }}">
 
-    {{> navbar-fixed-top }}
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <div class="container theme-showcase" role="main">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-      {{> body }}
+	<link rel="stylesheet" href="reveal/css/reveal.min.css">
+	<link rel="stylesheet" href="reveal/css/theme/beige.css" id="theme">
 
-    </div>
+	<link href="{{assets}}/css/main.css" rel="stylesheet">
 
-    <script src="{{ assets }}/js/SP.libs.js"></script>
-    <script src="{{ assets }}/js/SP.main.js"></script>
-  </body>
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
+</head>
+<body>
+
+	{{> body }}
+
+<script src="{{ assets }}/js/SP.libs.js"></script>
+<script src="{{ assets }}/js/SP.main.js"></script>
+</body>
 </html>
