--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -3,8 +3,13 @@ title: Home
 heading: 'Home'
 lead: Welcome to my blog!
 ---
-<div class="jumbotron">
-  <h1>{{ heading }}</h1>
-  <p>This is a Assemble Generator template using <a href="http://getbootstrap.com">Bootstrap</a>. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-  <p><a href="blog.html" class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+
+<div class="reveal">
+	<div class="slides">
+		{{> one }}
+		{{> two }}
+		{{> three }}
+	</div>
 </div>
+
+
