Avenir; add editable reveal theme sas

--- a/src/stylesheets/_base.scss
+++ b/src/stylesheets/_base.scss
@@ -4,7 +4,7 @@
 
 html {
 	height: 100%;
-	font-family: 'Proxima Nova', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+	font-family: 'Gotham Light', 'Proxima Nova', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 
 	font-size: 16px;
 	fill: currentColor;
