--- a/src/stylesheets/_helpers.scss
+++ b/src/stylesheets/_helpers.scss
@@ -7,3 +7,17 @@
 	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
 }
+
+@mixin font-face( $font-family, $font-path, $font-name, $weight: normal, $style: normal ) {
+	@font-face {
+		font-family: $font-family;
+		font-weight: $weight;
+		font-style: $style;
+
+		src: url('#{$font-path + $font-name}.eot');
+		src: url('#{$font-path + $font-name}.eot?#iefix')            format('embedded-opentype'),
+			url('#{$font-path + $font-name}.woff')                   format('woff'),
+			url('#{$font-path + $font-name}.ttf')                    format('truetype'),
+			url('#{$font-path + $font-name}.svg##{$font-name}')      format('svg');
+	}
+}
