--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -6,6 +6,7 @@ lead: Welcome to my blog!
 
 <div class="reveal">
 	<div class="slides">
+		{{> splash }}
 		{{> one }}
 		{{> two }}
 		{{> three }}
