--- a/src/templates/partials/one.hbs
+++ b/src/templates/partials/one.hbs
@@ -1,14 +1,10 @@
 <section>
-
-	<div>
-
-	</div>
-
-
-
-	<h1>Things I've Learned from Sass Plugins</h1>
-	<h3>HTML Presentations Made Easy</h3>
-	<p>
-		<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
-	</p>
+	<h1><small>Things I've Learned from</small><br>Sass Plugins</h1>
+	<img src="assets/compass-logo.png">
+	<img src="assets/images/bootstrap-logo.png">
+	<img src="assets/images/bourbon-logo.png">
+	<img src="assets/images/inuit-logo.png">
+	<img src="assets/images/ionic-logo.png">
+	<img src="assets/images/team-sass-logo.png">
+	<img src="assets/images/zurb-logo.png">
 </section>
