add slides content

--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -14,7 +14,7 @@
 
 	<link rel="stylesheet" href="css/reveal.min.css">
 
-	<link rel="stylesheet" href="{{assets}}/css/reveal-theme.css" id="theme">
+	<!--<link rel="stylesheet" href="{{assets}}/css/reveal-theme.css" id="theme">-->
 
 	<link href="{{assets}}/css/main.css" rel="stylesheet">
 
