fix the shithouse em body font; fix the shithouse prettify helper; add dist stuffs

--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -1,4 +1,8 @@
 <section>
-	{{ embed "src/code/_lorem.scss" "css" }}
+	{{#markdown}}
+		.styled-element {
+			content: "fuck this fucking shit";
+		}
+	{{/markdown}}
 </section>
 
