--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -12,9 +12,10 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<link rel="stylesheet" href="css/reveal.min.css">
+	<!--<link rel="stylesheet" href="css/reveal.min.css">-->
+	<link rel="stylesheet" href="css/reveal.css">
 
-	<!--<link rel="stylesheet" href="{{assets}}/css/reveal-theme.css" id="theme">-->
+	<link rel="stylesheet" href="{{assets}}/css/reveal-theme.css" id="theme">
 
 	<link href="{{assets}}/css/main.css" rel="stylesheet">
 
