--- a/src/stylesheets/components/_Slide.scss
+++ b/src/stylesheets/components/_Slide.scss
@@ -1,4 +1,13 @@
-.Slide {
+
+
+.slides {
+//	font-size: 40px;
+//	font-size: 4em;
+//
+//	zoom: 1 !important;
+
+	border: 1px solid red;
+
 	h1 {
 
 	}
