--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -1,8 +1,16 @@
 <div class="reveal">
 	<div class="slides">
-		{{> splash }}
-		{{> one }}
-		{{> two }}
-		{{> three }}
+		<section class="slide">
+			{{> splash }}
+		</section>
+		<section class="slide">
+			{{> one }}
+		</section>
+		<section class="slide">
+			{{> two }}
+		</section>
+		<section class="slide">
+			{{> three }}
+		</section>
 	</div>
 </div>
