--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -1,8 +1,16 @@
-<section>
-	{{#markdown}}
-		.styled-element {
-			content: "fuck this fucking shit";
-		}
-	{{/markdown}}
-</section>
+<h1>Chain import statements.</h1>
 
+<div class="before-and-after">
+	<div class="before">
+		<img src="{{ SP.DIR_IMAGES }}/chain-import-statements-2--mine.png">
+	</div>
+	<div class="after">
+		<img src="{{ SP.DIR_IMAGES }}/chain-import-statements-2--foundation.png">
+	</div>
+</div>
+
+
+<!--<div class="row">-->
+	<!--<div class="col"><img src="{{ SP.DIR_IMAGES }}/chain-import-statements--mine.png"></div>-->
+	<!--<div class="col"><img src="{{ SP.DIR_IMAGES }}/chain-import-statements--foundation.png"></div>-->
+<!--</div>-->
