--- a/src/templates/slides/splash.hbs
+++ b/src/templates/slides/splash.hbs
@@ -1,11 +1,9 @@
-<section>
-	<h1><small>Things I've Learned from</small><br>Sass Plugins</h1>
+<h1 class="jumbo-text"><small>Things I've <br>Learned from</small><br>Sass Plugins</h1>
 
-	<img src="{{ SP.DIR_IMAGES }}/compass-logo.png">
-	<img src="{{ SP.DIR_IMAGES }}/bootstrap-logo.png">
-	<img src="{{ SP.DIR_IMAGES }}/bourbon-logo.png">
-	<img src="{{ SP.DIR_IMAGES }}/inuit-logo.png">
-	<img src="{{ SP.DIR_IMAGES }}/ionic-logo.png">
-	<img src="{{ SP.DIR_IMAGES }}/team-sass-logo.png">
-	<img src="{{ SP.DIR_IMAGES }}/zurb-logo.png">
-</section>
+<!--<img src="{{ SP.DIR_IMAGES }}/compass-logo.png">-->
+<!--<img src="{{ SP.DIR_IMAGES }}/bootstrap-logo.png">-->
+<!--<img src="{{ SP.DIR_IMAGES }}/bourbon-logo.png">-->
+<!--<img src="{{ SP.DIR_IMAGES }}/inuit-logo.png">-->
+<!--<img src="{{ SP.DIR_IMAGES }}/ionic-logo.png">-->
+<!--<img src="{{ SP.DIR_IMAGES }}/team-sass-logo.png">-->
+<!--<img src="{{ SP.DIR_IMAGES }}/zurb-logo.png">-->
