--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<title>{{ title }} | {{ site.title }}</title>
+	<title>{{ site.title }}</title>
 
 	<meta name="author" content="{{ site.author }}">
 
