--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -10,7 +10,7 @@
 </div>
 
 
-<!--<div class="row">-->
-	<!--<div class="col"><img src="{{ SP.DIR_IMAGES }}/chain-import-statements--mine.png"></div>-->
-	<!--<div class="col"><img src="{{ SP.DIR_IMAGES }}/chain-import-statements--foundation.png"></div>-->
-<!--</div>-->
+
+<aside class="notes">
+	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+</aside>
