add slide heading content

--- a/src/stylesheets/_config.scss
+++ b/src/stylesheets/_config.scss
@@ -121,6 +121,7 @@ $GREEN:     #5F8700;
 // end Solarized
 
 $solarized-grey-text:  $BASE1;
+$solarized-yellow-text:  $YELLOW;
 
 // Semantic palette
 
