--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -63,6 +63,12 @@
 		<section class="slide">
 			{{> twenty }}
 		</section>
+		<section class="slide">
+			{{> twenty-one }}
+		</section>
+		<section class="slide">
+			{{> twenty-two }}
+		</section>
 
 	</div>
 </div>
