--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -1,5 +1,18 @@
-<h1>Type coercion.</h1>
+<section>
+	<h1>Use objects for configs.</h1>
 
-<aside class="notes">
-	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-</aside>
+	<aside class="notes">
+		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+	</aside>
+</section>
+
+<section>
+	<h1>Now you can access configs with getters and setters.</h1>
+
+	<aside class="notes">
+		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+	</aside>
+</section>
+
+
+
