--- a/src/templates/slides/nine.hbs
+++ b/src/templates/slides/nine.hbs
@@ -1,5 +1,34 @@
-<h1></h1>
+<section>
+	<h1>Use Compass URL helpers</h1>
 
-<aside class="notes">
-	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-</aside>
+	<aside class="notes">
+		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+	</aside>
+</section>
+
+
+<section>
+	<h1>...or abstract your own.</h1>
+
+	<aside class="notes">
+		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+	</aside>
+</section>
+
+
+<section>
+	<h1>Make other useful abstractions, like <code>z-index</code></h1>
+
+	<aside class="notes">
+		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+	</aside>
+</section>
+
+
+<section>
+	<h1>Make other useful abstractions, like <code>@media</code></h1>
+
+	<aside class="notes">
+		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+	</aside>
+</section>
