--- a/src/templates/slides/ten.hbs
+++ b/src/templates/slides/ten.hbs
@@ -1,5 +1,16 @@
-<h1></h1>
+<section>
+	<h1>Mixin libraries are cheap.</h1>
 
-<aside class="notes">
-	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-</aside>
+	<aside class="notes">
+		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+	</aside>
+</section>
+
+
+<section>
+	<h1>Optionally output CSS.</h1>
+
+	<aside class="notes">
+		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+	</aside>
+</section>
