new layout style

--- a/src/stylesheets/_config.scss
+++ b/src/stylesheets/_config.scss
@@ -126,3 +126,7 @@ $solarized-yellow-text:  $YELLOW;
 // Semantic palette
 
 $body-bg:   $BASE02 !default;
+
+$foundation-primary: #008cba;
+$bootstrap-primary: #6f5499;
+$inuit-primary: #4a8ec2;
