--- a/src/templates/slides/eight.hbs
+++ b/src/templates/slides/eight.hbs
@@ -1,5 +1,34 @@
 <h1>Grammar proof your selectors.</h1>
 
+<div class="stacked-pair">
+	<div class="mine">
+		<img src="{{ SP.DIR_IMAGES }}/grammar-proof-selectors-2--mine.png">
+	</div>
+	<div class="foundation">
+		<img src="{{ SP.DIR_IMAGES }}/grammar-proof-selectors-2--inuit.png">
+	</div>
+</div>
+
+
+<!--<div class="before-and-after">-->
+	<!--<div class="before">-->
+		<!--<img src="{{ SP.DIR_IMAGES }}/grammar-proof-selectors--mine.png">-->
+	<!--</div>-->
+	<!--<div class="after">-->
+		<!--<img src="{{ SP.DIR_IMAGES }}/grammar-proof-selectors--inuit.png">-->
+	<!--</div>-->
+<!--</div>-->
+
+
+<!--<div class="light-and-shade">-->
+	<!--<div class="light">-->
+		<!--<img src="{{ SP.DIR_IMAGES }}/grammar-proof-selectors-2--mine.png">-->
+	<!--</div>-->
+	<!--<div class="shade">-->
+		<!--<img src="{{ SP.DIR_IMAGES }}/grammar-proof-selectors-2--inuit.png">-->
+	<!--</div>-->
+<!--</div>-->
+
 <aside class="notes">
 	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 </aside>
