--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -1,14 +1,12 @@
 <h1>Chain import statements.</h1>
-
-<div class="before-and-after">
-	<div class="before">
-		<img src="{{ SP.DIR_IMAGES }}/chain-import-statements-2--mine.png">
+<div class="stacked-pair">
+	<div class="mine">
+		<img src="{{ SP.DIR_IMAGES }}/chain--mine.png" height="300px" width="640">
 	</div>
-	<div class="after">
-		<img src="{{ SP.DIR_IMAGES }}/chain-import-statements-2--foundation.png">
+	<div class="foundation">
+		<img src="{{ SP.DIR_IMAGES }}/chain--foundation.png" height="300px" width="640">
 	</div>
 </div>
-
 
 
 <aside class="notes">
