--- a/src/content/_my-code/styles.scss
+++ b/src/content/_my-code/styles.scss
@@ -1,8 +1,6 @@
-@import 'normalize';
-@import 'base';
-@import 'typography';
-
-@import 'component/header';
-@import 'component/footer';
-
-@import 'templates/home';
+.box__heading {
+    border: 1px solid gray;
+}
+.box--heading--grey {
+    color: grey;
+}
