--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -1,10 +1,10 @@
 <h1>Chain import statements.</h1>
 <div class="stacked-pair">
 	<div class="mine">
-		<img src="{{ SP.DIR_IMAGES }}/chain--mine.png" height="300px" width="640">
+		<img src="{{ SP.DIR_IMAGES }}/chain--mine.png" height="300" width="640">
 	</div>
 	<div class="foundation">
-		<img src="{{ SP.DIR_IMAGES }}/chain--foundation.png" height="300px" width="640">
+		<img src="{{ SP.DIR_IMAGES }}/chain--foundation.png" height="300" width="640">
 	</div>
 </div>
 
