--- a/src/templates/slides/eight.hbs
+++ b/src/templates/slides/eight.hbs
@@ -2,10 +2,10 @@
 
 <div class="stacked-pair">
 	<div class="mine">
-		<img src="{{ SP.DIR_IMAGES }}/grammar-proof-selectors-2--mine.png">
+		<img src="{{ SP.DIR_IMAGES }}/grammar--mine.png" height="300" width="640">
 	</div>
-	<div class="foundation">
-		<img src="{{ SP.DIR_IMAGES }}/grammar-proof-selectors-2--inuit.png">
+	<div class="inuit">
+		<img src="{{ SP.DIR_IMAGES }}/grammar--inuit.png" height="300" width="640">
 	</div>
 </div>
 
