--- a/src/content/_my-code/styles.scss
+++ b/src/content/_my-code/styles.scss
@@ -1,6 +1,3 @@
-.box__heading {
-    border: 1px solid gray;
-}
-.box--heading--grey {
-    color: grey;
+.arrow {
+    background-image: url('../../assets/images/right-arrow.png');
 }
