--- a/src/templates/slides/nine.hbs
+++ b/src/templates/slides/nine.hbs
@@ -1,6 +1,16 @@
 <section>
 	<h1>Use Compass URL helpers</h1>
 
+	<div class="vertical-panels">
+		<div class="panel">
+			<img src="{{ SP.DIR_IMAGES }}/compass-URL--mine.png" height="150" width="960">
+		</div>
+		<div class="panel">
+			<img src="{{ SP.DIR_IMAGES }}/compass-URL--better.png" height="150" width="960">
+		</div>
+	</div>
+
+
 	<aside class="notes">
 		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 	</aside>
