--- a/src/templates/slides/splash.hbs
+++ b/src/templates/slides/splash.hbs
@@ -1,4 +1,4 @@
-<h1 class="jumbo-text"><small>Things I've <br>Learned from</small><br>Sass Plugins</h1>
+<h1 class="jumbo-text"><small><span class="sol-yellow">10</span> Things I've <br>Learned from</small><br>Sass Plugins</h1>
 
 <!--<img src="{{ SP.DIR_IMAGES }}/compass-logo.png">-->
 <!--<img src="{{ SP.DIR_IMAGES }}/bootstrap-logo.png">-->
