--- a/src/templates/slides/twenty-two.hbs
+++ b/src/templates/slides/twenty-two.hbs
@@ -1,2 +1,13 @@
-<h1>elise.chant@gmail.com</h1>
-<h1>@elisechant</h1>
+<h1>Keep it fun.</h1>
+
+https://github.com/caffeinatedlabs/codeblog/blob/master/assets/craftstrap.sass
+{{#markdown}}
+	// COLOR SCHEMES
+	$leche: #BBA993
+	$caramel: #CC9966
+	$shit-brown: #330000
+	$craft-red: rgb(238, 64, 55)
+	$dark-red: #660000
+	$satan-grey: #666
+	$tres-gris: #333
+{{/markdown}}
