--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -4,71 +4,77 @@
 			{{> splash }}
 		</section>
 		<section class="slide">
+			{{> eight }}
+		</section>
+		<section class="slide">
 			{{> one }}
-		</section>
-		<section class="slide">
-			{{> two }}
-		</section>
-		<section class="slide">
-			{{> three }}
 		</section>
 		<section class="slide">
 			{{> four }}
 		</section>
 		<section class="slide">
+			{{> sixteen }}
+		</section>
+		<section class="slide">
 			{{> five }}
-		</section>
-		<section class="slide">
-			{{> six }}
-		</section>
-		<section class="slide">
-			{{> seven }}
-		</section>
-		<section class="slide">
-			{{> eight }}
-		</section>
-		<section class="slide">
-			{{> nine }}
 		</section>
 		<section class="slide">
 			{{> ten }}
 		</section>
 		<section class="slide">
-			{{> eleven }}
-		</section>
-		<section class="slide">
-			{{> twelve }}
-		</section>
-		<section class="slide">
-			{{> thirteen }}
-		</section>
-		<section class="slide">
 			{{> fourteen }}
-		</section>
-		<section class="slide">
-			{{> fifteen }}
-		</section>
-		<section class="slide">
-			{{> sixteen }}
-		</section>
-		<section class="slide">
-			{{> seventeen }}
-		</section>
-		<section class="slide">
-			{{> eighteen }}
 		</section>
 		<section class="slide">
 			{{> nineteen }}
 		</section>
 		<section class="slide">
-			{{> twenty }}
+			{{> two }}
 		</section>
 		<section class="slide">
-			{{> twenty-one }}
+			{{> twenty }}
 		</section>
 		<section class="slide">
 			{{> twenty-two }}
 		</section>
+		<section class="slide">
+			{{> twenty-one }}
+		</section>
+
+
+
+
+		<!--<section class="slide">-->
+			<!--{{> three }}-->
+		<!--</section>-->
+		<!--<section class="slide">-->
+			<!--{{> six }}-->
+		<!--</section>-->
+		<!--<section class="slide">-->
+			<!--{{> seven }}-->
+		<!--</section>-->
+		<!--<section class="slide">-->
+			<!--{{> nine }}-->
+		<!--</section>-->
+		<!--<section class="slide">-->
+			<!--{{> eleven }}-->
+		<!--</section>-->
+		<!--<section class="slide">-->
+			<!--{{> twelve }}-->
+		<!--</section>-->
+		<!--<section class="slide">-->
+			<!--{{> thirteen }}-->
+		<!--</section>-->
+
+		<!--<section class="slide">-->
+			<!--{{> fifteen }}-->
+		<!--</section>-->
+		<!--<section class="slide">-->
+			<!--{{> seventeen }}-->
+		<!--</section>-->
+		<!--<section class="slide">-->
+			<!--{{> eighteen }}-->
+		<!--</section>-->
+
 
 	</div>
 </div>
