--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -7,7 +7,7 @@
 </section>
 
 <section>
-	<h1>Now you can access configs with getters and setters.</h1>
+	<h1>Access config objects with getters and setters.</h1>
 
 	<aside class="notes">
 		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
