add some new images

--- a/src/stylesheets/_config.scss
+++ b/src/stylesheets/_config.scss
@@ -130,3 +130,4 @@ $body-bg:   $BASE02 !default;
 $foundation-primary: #008cba;
 $bootstrap-primary: #6f5499;
 $inuit-primary: #4a8ec2;
+$toolkit-primary: #ff0065;
