--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -1,5 +1,13 @@
 <section>
-	<h1>Use objects for configs.</h1>
+	<h1 class="fragment" data-fragment-index="0">Use objects for configs.</h1>
+
+	<div class="mine">
+		<img src="{{ SP.DIR_IMAGES }}/config-object--mine.png" height="600" width="960">
+	</div>
+
+	<div class="toolkit fragment" data-fragment-index="0">
+		<img src="{{ SP.DIR_IMAGES }}/config-object--toolkit.jpg" height="600" width="960">
+	</div>
 
 	<aside class="notes">
 		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
@@ -8,6 +16,15 @@
 
 <section>
 	<h1>Access config objects with getters and setters.</h1>
+
+	<div class="toolkit">
+		<img src="{{ SP.DIR_IMAGES }}/object-config-getter-toolkit.jpg" height="600" width="960">
+	</div>
+
+	<div class="toolkit fragment" data-fragment-index="0">
+		<img src="{{ SP.DIR_IMAGES }}/object-config-use-getter-toolkit.jpg" height="600" width="960">
+	</div>
+
 
 	<aside class="notes">
 		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
