--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -1,12 +1,16 @@
-<h1>Chain import statements.</h1>
-<div class="stacked-pair">
-	<div class="mine">
-		<img src="{{ SP.DIR_IMAGES }}/chain--mine.png" height="300" width="640">
-	</div>
-	<div class="foundation">
-		<img src="{{ SP.DIR_IMAGES }}/chain--foundation.png" height="300" width="640">
-	</div>
+<h1 class="fragment" data-fragment-index="1">Chain import statements.</h1>
+
+<div class="mine">
+	<img src="{{ SP.DIR_IMAGES }}/chain-import-mine.jpg" height="" width="">
 </div>
+<div class="mine fragment" data-fragment-index="0">
+	<img src="{{ SP.DIR_IMAGES }}/chain-import-script.jpg" height="" width="">
+</div>
+
+<div class="foundation fragment" data-fragment-index="1">
+	<img src="{{ SP.DIR_IMAGES }}/chain-import-foundation.png" height="" width="">
+</div>
+
 
 
 <aside class="notes">
