--- a/src/templates/slides/sixteen.hbs
+++ b/src/templates/slides/sixteen.hbs
@@ -1,5 +1,7 @@
 <h1>Use lots of Sass Partials.</h1>
 
+<!-- todo - screenshot video ?? -->
+
 <aside class="notes">
 	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 </aside>
