--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -1,42 +1,42 @@
 <div class="reveal">
 	<div class="slides">
-		<section class="slide">
+		<section class="slide splash">
 			{{> splash }}
 		</section>
-		<section class="slide">
+		<section class="slide eight">
 			{{> eight }}
 		</section>
-		<section class="slide">
+		<section class="slide one">
 			{{> one }}
 		</section>
-		<section class="slide">
+		<section class="slide four">
 			{{> four }}
 		</section>
-		<section class="slide">
+		<section class="slide sixteen">
 			{{> sixteen }}
 		</section>
-		<section class="slide">
+		<section class="slide five">
 			{{> five }}
 		</section>
-		<section class="slide">
+		<section class="slide ten">
 			{{> ten }}
 		</section>
-		<section class="slide">
+		<section class="slide fourteen">
 			{{> fourteen }}
 		</section>
-		<section class="slide">
+		<section class="slide nineteen">
 			{{> nineteen }}
 		</section>
-		<section class="slide">
+		<section class="slide two">
 			{{> two }}
 		</section>
-		<section class="slide">
+		<section class="slide twenty">
 			{{> twenty }}
 		</section>
-		<section class="slide">
+		<section class="slide twenty-two">
 			{{> twenty-two }}
 		</section>
-		<section class="slide">
+		<section class="slide twenty-one">
 			{{> twenty-one }}
 		</section>
 
