--- a/src/templates/slides/eight.hbs
+++ b/src/templates/slides/eight.hbs
@@ -1,12 +1,13 @@
 <h1 class="fragment" data-fragment-index="0">Grammar proof your selectors.</h1>
 
-<div class="mine-and-theirs--vertical">
+<div class="mine-and-theirs--diagonal">
 	<div class="mine">
-		<img src="{{ SP.DIR_IMAGES }}/grammar-mine.jpg" width="" height="">
+		<img src="{{ SP.DIR_IMAGES }}/eight-mine.jpg" width="850" height="304">
 	</div>
 
 	<div class="inuit fragment" data-fragment-index="0">
-		<img src="{{ SP.DIR_IMAGES }}/grammar-inuit.jpg" width="" height="">
+	<!--<div class="inuit">-->
+		<img src="{{ SP.DIR_IMAGES }}/eight-inuit.jpg" width="638" height="286">
 	</div>
 </div>
 
