--- a/src/templates/slides/eight.hbs
+++ b/src/templates/slides/eight.hbs
@@ -13,5 +13,7 @@
 
 
 <aside class="notes">
-	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+	We should all know the pain of debugging typos in selectors? This is something that happens a lot !<br>
+	So, when you’re writing selectors,<br>
+	<strong>Grammar proof your selectors !</strong>
 </aside>
