--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -1,20 +1,26 @@
 <h1 class="fragment" data-fragment-index="1">Chain import statements.</h1>
 
+<div class="mine-and-theirs--diagonal">
+	<div class="mine">
+		<div class="side-by-side">
+			<div class="side">
+				<img src="{{ SP.DIR_IMAGES }}/one-mine.jpg" height="" width="">
+			</div>
+			<div class="side--right fragment" data-fragment-index="0">
+				<img src="{{ SP.DIR_IMAGES }}/one-script-mine.jpg" height="" width="480">
+			</div>
+		</div>
 
+	</div>
 
-<div class="mine">
-	<img src="{{ SP.DIR_IMAGES }}/chain-import-mine.jpg" height="" width="">
+	<div class="foundation fragment" data-fragment-index="1">
+		<img src="{{ SP.DIR_IMAGES }}/one-foundation.jpg" height="" width="800">
+	</div>
 </div>
-<div class="mine fragment" data-fragment-index="0">
-	<img src="{{ SP.DIR_IMAGES }}/chain-import-script.jpg" height="" width="">
-</div>
-
-<div class="foundation fragment" data-fragment-index="1">
-	<img src="{{ SP.DIR_IMAGES }}/chain-import-foundation.png" height="" width="">
-</div>
-
 
 
 <aside class="notes">
-	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+	It’s less annoying, but something always feels wrong about repeating the @import directive. It feels much more natural to chain the import, like chaining JavaScript variables,<br>
+	well it turns out you can,<br>
+	<strong>Chain import statements !</strong>
 </aside>
