--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -1,13 +1,16 @@
 <section>
 	<h1 class="fragment" data-fragment-index="0">Use objects for configs.</h1>
 
-	<div class="mine">
-		<img src="{{ SP.DIR_IMAGES }}/config-object--mine.png" height="600" width="960">
+	<div class="each-on-top-of">
+		<div class="each mine">
+			<img src="{{ SP.DIR_IMAGES }}/four-mine.jpg" height="" width="">
+		</div>
+
+		<div class="each toolkit fragment" data-fragment-index="0">
+			<img src="{{ SP.DIR_IMAGES }}/four-toolkit.jpg" height="" width="">
+		</div>
 	</div>
 
-	<div class="toolkit fragment" data-fragment-index="0">
-		<img src="{{ SP.DIR_IMAGES }}/config-object--toolkit.jpg" height="600" width="960">
-	</div>
 
 	<aside class="notes">
 		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
