slide 3.1 config object demo

--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -18,14 +18,18 @@
 </section>
 
 <section>
-	<h1>Access config objects with getters and setters.</h1>
+	<h1>Access a config object with getters and setters.</h1>
 
 	<div class="toolkit">
-		<img src="{{ SP.DIR_IMAGES }}/object-config-getter-toolkit.jpg" height="600" width="960">
+		<img src="{{ SP.DIR_IMAGES }}/four-2-config-item-toolkit.jpg" height="" width="">
 	</div>
-
-	<div class="toolkit fragment" data-fragment-index="0">
-		<img src="{{ SP.DIR_IMAGES }}/object-config-use-getter-toolkit.jpg" height="600" width="960">
+	<br>
+	<div class="toolkit">
+		<img src="{{ SP.DIR_IMAGES }}/four-2-getters-toolkit.jpg" height="" width="">
+	</div>
+	<br>
+	<div class="toolkit">
+		<img src="{{ SP.DIR_IMAGES }}/four-2-use-getter-toolkit.jpg" height="" width="">
 	</div>
 
 
