--- a/src/templates/slides/sixteen.hbs
+++ b/src/templates/slides/sixteen.hbs
@@ -1,6 +1,18 @@
 <h1>Use lots of Sass Partials.</h1>
 
-<!-- todo - screenshot video ?? -->
+<div class="each-columns">
+	<div class="each fragment" data-fragment-index="0">
+		<img src="{{ SP.DIR_IMAGES }}/sixteen-foundation.jpg" height="" width="">
+	</div>
+
+	<div class="each fragment" data-fragment-index="1">
+		<img src="{{ SP.DIR_IMAGES }}/sixteen-bootstrap.jpg" height="" width="">
+	</div>
+
+	<div class="each fragment" data-fragment-index="2">
+		<img src="{{ SP.DIR_IMAGES }}/sixteen-inuit.jpg" height="" width="">
+	</div>
+</div>
 
 <aside class="notes">
 	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
