--- a/src/templates/slides/five.hbs
+++ b/src/templates/slides/five.hbs
@@ -1,5 +1,37 @@
-<h1>Document inline.</h1>
+<section>
+	<h1>Document inline.</h1>
+</section>
+
+<section>
+	<div class="mine">
+		<img src="{{ SP.DIR_IMAGES }}/five-bad-comments-mine.jpg" width="" height="">
+	</div>
+	<br>
+	<br>
+	<div class="mine fragment" data-fragment-index="0">
+		<img src="{{ SP.DIR_IMAGES }}/five-bad-comments-mixin-mine.jpg" width="" height="">
+	</div>
+</section>
+
+
+<section>
+	<div class="mine">
+		<img src="{{ SP.DIR_IMAGES }}/five-variables-bootstrap.jpg" width="" height="">
+	</div>
+</section>
+
+<section>
+	<div class="mine">
+		<img src="{{ SP.DIR_IMAGES }}/five-forms-inuit.jpg" width="" height="">
+	</div>
+</section>
+
+<section>
+	<div class="mine">
+		<img src="{{ SP.DIR_IMAGES }}/five-arrows-inuit.jpg" width="" height="">
+	</div>
+</section>
 
 <aside class="notes">
-	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+
 </aside>
