a bunch more slides. worst commit message ever

--- a/src/stylesheets/_config.scss
+++ b/src/stylesheets/_config.scss
@@ -135,3 +135,4 @@ $foundation-primary: #008cba;
 $bootstrap-primary: #6f5499;
 $inuit-primary: #4a8ec2;
 $toolkit-primary: #ff0065;
+$compass-primary: #fb292d;
