--- a/src/templates/slides/five.hbs
+++ b/src/templates/slides/five.hbs
@@ -3,6 +3,7 @@
 </section>
 
 <section>
+	<h1>Document inline.</h1>
 	<div class="mine">
 		<img src="{{ SP.DIR_IMAGES }}/five-bad-comments-mine.jpg" width="" height="">
 	</div>
@@ -15,19 +16,19 @@
 
 
 <section>
-	<div class="mine">
+	<div class="bootstrap">
 		<img src="{{ SP.DIR_IMAGES }}/five-variables-bootstrap.jpg" width="" height="">
 	</div>
 </section>
 
 <section>
-	<div class="mine">
+	<div class="inuit">
 		<img src="{{ SP.DIR_IMAGES }}/five-forms-inuit.jpg" width="" height="">
 	</div>
 </section>
 
 <section>
-	<div class="mine">
+	<div class="inuit">
 		<img src="{{ SP.DIR_IMAGES }}/five-arrows-inuit.jpg" width="" height="">
 	</div>
 </section>
