--- a/src/templates/slides/fourteen.hbs
+++ b/src/templates/slides/fourteen.hbs
@@ -1,4 +1,19 @@
-<h1>Use a debug flag.</h1>
+<section>
+	<h1>Use a debug flag.</h1>
+</section>
+
+<section>
+	<h1>Use a debug flag.</h1>
+	<div class="inuit">
+		<img src="{{ SP.DIR_IMAGES }}/fourteen-debug-inuit.jpg" width="" height="">
+	</div>
+	<br>
+	<br>
+	<div class="improved fragment" data-fragment-index="1">
+		<img src="{{ SP.DIR_IMAGES }}/fourteen-improved.jpg" width="" height="">
+	</div>
+</section>
+
 
 <aside class="notes">
 	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
