--- a/src/templates/slides/nineteen.hbs
+++ b/src/templates/slides/nineteen.hbs
@@ -1,4 +1,16 @@
-<h1>Format your mixins so they are easy to read.</h1>
+<h1 class="fragment" data-fragment-index="0">Format your mixins so they are easy to read.</h1>
+<div class="mine-and-theirs--diagonal">
+	<div class="mine">
+		<img src="{{ SP.DIR_IMAGES }}/nineteen-mine.jpg" height="" width="">
+	</div>
+
+	<div class="compass fragment" data-fragment-index="0">
+		<!--<div class="inuit">-->
+		<img src="{{ SP.DIR_IMAGES }}/nineteen-compass.jpg" height="" width="466">
+	</div>
+</div>
+
+
 
 <aside class="notes">
 	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
