--- a/src/templates/slides/twenty-two.hbs
+++ b/src/templates/slides/twenty-two.hbs
@@ -1,4 +1,4 @@
-<h1>Keep it fun.</h1>
+<h1>Don't be too serious.</h1>
 
 https://github.com/caffeinatedlabs/codeblog/blob/master/assets/craftstrap.sass
 {{#markdown}}
